<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_task"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_new_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/enter_your_task">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_todo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/enter_description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_todo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_todo_description"
        app:layout_constraintStart_toStartOf="@id/layout_todo_description"
        android:layout_marginVertical="8dp"
        android:text="@string/select_date"
        android:textSize="20sp"
        android:textColor="@color/ColorPrimaryBlue"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/add_new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/ColorPrimaryBlue"
        android:text="@string/add_new_task"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"

        />



</androidx.constraintlayout.widget.ConstraintLayout>