<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/ColorPrimaryBlue"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingHorizontal="36dp"
        android:paddingVertical="38dp"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        />
    
    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_text"
        android:layout_marginHorizontal="32dp"
        android:entries="@array/languages"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20sp"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/mode"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_language"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/spinner_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mode_text"
        android:layout_marginHorizontal="32dp"
        android:entries="@array/mode"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20sp"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:defaultFocusHighlightEnabled="true"
        android:dropDownWidth="match_parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>